--- a/vilm.yaml
+++ b/vilm.yaml
@@ -1,5 +1,6 @@
 payload:
   - IP-CIDR,74.48.51.8
+  - IP-CIDR,8.218.111.116
   - IP-CIDR,8.134.187.254 #apad dns
   - DOMAIN-SUFFIX,vxtrans.com   #钛盘上传
   - DOMAIN-SUFFIX,vx-cdn.com    #钛盘下载
