--- a/clash_rules/ddli.yaml
+++ b/clash_rules/ddli.yaml
@@ -1,4 +1,4 @@
 payload:
   - DOMAIN,69shuba.cx                  #69书吧
   - DOMAIN,linux.do                  #linux.do 
-
+  - DOMAIN,deepseek.com                  #deepseek防止手机号登录页面
