--- a/clash_rules/ddli.yaml
+++ b/clash_rules/ddli.yaml
@@ -1,3 +1,4 @@
 payload:
   - DOMAIN,69shuba.cx                  #69书吧
   - DOMAIN,linux.do                  #linux.do 
+  - DOMAIN,claw.cloud                 #claw
