--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,8 +1,8 @@
 name: Rules Update
 
-on:
+于:
   push:
-    branches: [ main ]
+    分支: [ main ]
   workflow_dispatch:
   schedule:
     - cron: '0 11 * * *'
@@ -21,6 +21,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pandas requests pyyaml
+        
+    # 新增 AdRules 处理步骤
+    - name: Download and process AdRules
+      run: |
+        mkdir -p ./clash_rules
+        # 下载规则文件并清洗数据
+        curl -sSL "https://raw.githubusercontent.com/Cats-Team/AdRules/main/adrules_domainset.txt" -o temp.txt
+        # 生成 Clash 格式规则
+        echo "payload:" > ./clash_rules/AdRules.yaml
+        grep -Ev '^(#|$)' temp.txt | sed 's/^/  - DOMAIN-SUFFIX,/' >> ./clash_rules/AdRules.yaml
+        rm -f temp.txt
+
     - name: Run script
       run: python main.py
     - name: Commit and push updated rules
