--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,9 +1,10 @@
 name: Rules Update
 
-于:
+# 修复事件触发配置
+于: 
   push:
     分支: [ main ]
-  workflow_dispatch:
+  workflow_dispatch: {}  # 允许手动触发
   schedule:
     - cron: '0 11 * * *'
 
@@ -17,24 +18,24 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.x
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pandas requests pyyaml
-        
+    
     # 新增 AdRules 处理步骤
     - name: Download and process AdRules
       run: |
         mkdir -p ./clash_rules
-        # 下载规则文件并清洗数据
         curl -sSL "https://raw.githubusercontent.com/Cats-Team/AdRules/main/adrules_domainset.txt" -o temp.txt
-        # 生成 Clash 格式规则
         echo "payload:" > ./clash_rules/AdRules.yaml
         grep -Ev '^(#|$)' temp.txt | sed 's/^/  - DOMAIN-SUFFIX,/' >> ./clash_rules/AdRules.yaml
         rm -f temp.txt
 
     - name: Run script
       run: python main.py
+    
     - name: Commit and push updated rules
       run: |
         git config --global user.email "action@github.com"
