--- a/clash_rules/jujt.yaml
+++ b/clash_rules/jujt.yaml
@@ -3,7 +3,7 @@ payload:
   - DOMAIN,dns.weixin.qq.com.cn
   - DOMAIN,aedns.weixin.qq.com
   - DOMAIN,apiauth.quickconnect.to
-  - DOMAIN-SUFFIX,jable.tv
+#  - DOMAIN-SUFFIX,jable.tv
   - IP-CIDR,42.187.182.106/32,no-resolve
   - IP-CIDR,42.187.182.123/32,no-resolve
   - IP-CIDR,42.187.184.154/32,no-resolve
