--- a/clash_rules/vilm.yaml
+++ b/clash_rules/vilm.yaml
@@ -14,4 +14,5 @@ payload:
   - DOMAIN-SUFFIX,apad.pro  #dns
   - DOMAIN-SUFFIX,yckceo.com  #源仓库
   - DOMAIN,deeplx.vcuixb.eu.org   #deeplx
+  - DOMAIN-SUFFIX,bitdeer.ai    #bitdeer的api
 #  - DOMAIN-SUFFIX,linux.do  #linux.do
