--- a/clash_rules/fuwuqi.yaml
+++ b/clash_rules/fuwuqi.yaml
@@ -1,7 +1,7 @@
 payload:
   - IP-CIDR,47.129.38.129/24 #miky新加坡vps
-  - IP-CIDR,47.79.37.249 #claw日本vps
-  - IP-CIDR,142.171.83.26 #洛杉矶vps
-  - IP-CIDR,64.181.250.108 #甲骨文圣何塞vps
+  - IP-CIDR,47.79.37.249/24 #claw日本vps
+  - IP-CIDR,142.171.83.26/24 #洛杉矶vps
+  - IP-CIDR,64.181.250.108/24 #甲骨文圣何塞vps
   - DOMAIN-SUFFIX,vcuixb.top
   - DOMAIN-SUFFIX,vcuixb.eu.org
