--- a/clash_rules/emby.yaml
+++ b/clash_rules/emby.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN,stream4.misakaf.org # MisakaF
   - DOMAIN-SUFFIX,bangumi.ca
   - DOMAIN-SUFFIX,789.123456.al
+  - DOMAIN-SUFFIX,micu.hk #micu公费服
   - DOMAIN,embyplus.org                       #emby纸片人
   - DOMAIN-SUFFIX,gd.9521732.xyz           #纸片人Emby cloud自选反代
   - DOMAIN-SUFFIX,pub1.emby.wtf         #终点站emby大妹
