--- a/clash_rules/emby.yaml
+++ b/clash_rules/emby.yaml
@@ -9,9 +9,7 @@ payload:
   - DOMAIN-SUFFIX,micu.hk #micu公费服
   - DOMAIN,embyplus.org                       #emby纸片人
   - DOMAIN-SUFFIX,gd.9521732.xyz           #纸片人Emby cloud自选反代
-  - DOMAIN-SUFFIX,pub1.emby.wtf         #终点站emby大妹
-  - DOMAIN-SUFFIX,pub2.emby.wtf        #终点站emby二妹
-  - DOMAIN-SUFFIX,pub3.emby.wtf           #终点站emby三妹
+  - DOMAIN-SUFFIX,emby.wtf         #终点站emby大妹
   - DOMAIN,film.ohhhh.org              # NMEmby
   - DOMAIN,emby.aca.best              # ACA Emby
   - DOMAIN,porn.aca.best             #  ACA Pron Emby
