--- a/clash_rules/emby.yaml
+++ b/clash_rules/emby.yaml
@@ -7,6 +7,8 @@ payload:
   - DOMAIN-SUFFIX,bangumi.ca
   - DOMAIN-SUFFIX,789.123456.al
   - DOMAIN-SUFFIX,micu.hk #micu公费服
+  - DOMAIN-SUFFIX,nubebelle.vip #云幕emby
+  - DOMAIN-SUFFIX,nubebelle.cn #云幕emby
   - DOMAIN,embyplus.org                       #emby纸片人
   - DOMAIN-SUFFIX,gd.9521732.xyz           #纸片人Emby cloud自选反代
   - DOMAIN-SUFFIX,emby.wtf         #终点站emby大妹
