--- a/clash_rules/vilm.yaml
+++ b/clash_rules/vilm.yaml
@@ -9,4 +9,4 @@ payload:
   - DOMAIN-SUFFIX,yckceo.com  #源仓库
   - DOMAIN,deeplx.vcuixb.eu.org   #deeplx
   - DOMAIN-SUFFIX,bitdeer.ai    #bitdeer的api
-#  - DOMAIN-SUFFIX,linux.do  #linux.do
+  - DOMAIN-SUFFIX,linux.do  #linux.do
