--- a/clash_rules/ddli.yaml
+++ b/clash_rules/ddli.yaml
@@ -1,3 +1,4 @@
 payload:
   - DOMAIN-SUFFIX,69shuba.com                 #69书吧
   - DOMAIN-SUFFIX,mangacopy.com   #拷贝漫画
+  - DOMAIN,ys-l.ysepan.com  #虎码网盘下载
