Add linux.do to DDLI rules

--- a/clash_rules/ddli.yaml
+++ b/clash_rules/ddli.yaml
@@ -2,3 +2,4 @@ payload:
   - DOMAIN-SUFFIX,69shuba.com                 #69书吧
   - DOMAIN-SUFFIX,mangacopy.com   #拷贝漫画
   - DOMAIN,ys-l.ysepan.com  #虎码网盘下载
+  - DOMAIN-SUFFIX,linux.do  #linux.do
