Add DOMAIN rule for dns.yiandrive.com

--- a/clash_rules/fuwuqi.yaml
+++ b/clash_rules/fuwuqi.yaml
@@ -7,4 +7,4 @@ payload:
   - DOMAIN-SUFFIX,vcuixb.top
   - DOMAIN-SUFFIX,vcuixb.eu.org
   - DOMAIN-SUFFIX,uianxi.eu.org
-  
+  - DOMAIN,dns.yiandrive.com
