--- a/clash_rules/vilm.yaml
+++ b/clash_rules/vilm.yaml
@@ -11,3 +11,4 @@ payload:
   - DOMAIN-SUFFIX,bitdeer.ai    #bitdeer的api
 #  - DOMAIN-SUFFIX,linux.do  #linux.do
   - DOMAIN-SUFFIX,elysia.h-e.top  #好用的claude公益站
+  - DOMAIN-SUFFIX,theluyuan.com        #linux.do 公益
