--- a/clash_rules/ddli.yaml
+++ b/clash_rules/ddli.yaml
@@ -3,3 +3,4 @@ payload:
   - DOMAIN-SUFFIX,mangacopy.com   #拷贝漫画
   - DOMAIN,ys-l.ysepan.com  #虎码网盘下载
   - DOMAIN-SUFFIX,linux.do  #linux.do
+  - DOMAIN-SUFFIX,oplist.org #openlist官方文档
